[package]
name = "esp_load_cell"
version = "0.1.0"
authors = ["Artur Sulej <mr.artur.su@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp_load_cell"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
loadcell = "0.3.0"
critical-section = { version = "1.2", features = ["std"] }

##########
#default = ["std", "embassy", "esp-idf-svc/native"]
#
#pio = ["esp-idf-svc/pio"]
#std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
#alloc = ["esp-idf-svc/alloc"]
#nightly = ["esp-idf-svc/nightly"]
#experimental = ["esp-idf-svc/experimental"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
#
#[dependencies]
#log = { version = "0.4", default-features = false }
#esp-idf-svc = { version = "0.51.0", default-features = false }
#loadcell = "0.3.0"
##########

[build-dependencies]
embuild = "0.33"
