[package]
name = "esp_load_cell"
version = "0.1.0"
authors = ["Artur Sulej <mr.artur.su@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp_load_cell"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
loadcell = "0.3.0"
critical-section = { version = "1.2", features = ["std"] }

[build-dependencies]
embuild = "0.33"
